--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
+    <head>
+        <title>Liana's GitHub Page</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <h1>
             Liana's GitHub Pages Site
         </h1>
         <p>A work in progress...</p>
+        <p>And also a DINOSAUR!</p>
+        <img src="https://cdn.shopify.com/s/files/1/1418/9826/products/T-Rex_4_grande.jpg?v=1471103251" alt="dinosaur">
     </body>
 </html>
