added other stuff page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1>
             Liana's GitHub Pages Site
         </h1>
-        <p>A work in progress...</p>
+        <p>A work in progress... <a href="stuff.html">and some other stuff!</a></p>
         <p>And also a DINOSAUR!</p>
         <img src="https://cdn.shopify.com/s/files/1/1418/9826/products/T-Rex_4_grande.jpg?v=1471103251" alt="dinosaur">
     </body>
