added reset css file

--- a/stuff.html
+++ b/stuff.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Other Stuff</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,5 +11,6 @@
     <p>And also ANOTHER DINOSAUR!</p>
     <img src="https://img.purch.com/w/660/aHR0cDovL3d3dy5saXZlc2NpZW5jZS5jb20vaW1hZ2VzL2kvMDAwLzA4MC82NDEvb3JpZ2luYWwvZGlub3NhdXItbWF0aW5nLWRhbmNlLTAxYS5qcGc=" alt="two dinosaurs">
     <p>These ones are friends!</p>
+    <p><a href="index.html">Go back to the last page?</a></p>
 </body>
 </html>
